# AgrisprayTracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.rnote  TODO2.rnote
cmake/: CompilerProperties.cmake  CompillerProperties.cmake  FindLibKML.cmake
src/: AgrisplayTracer.cpp
src/flight/: mavlink.cpp  mavlink.h  trace.cpp  trace.h  waypoints.h
src/poly/: field.h  parser.cpp  parser.h  reader.h
src/poly/utils/: geo.h  quantize.h
src/tracer/: algo.h
